# Transonic-Euler-Solver

./: .gitignore  CMakeLists.txt  ClangOverrides.txt  DOXYFILE  LICENSE  README.md  THEORY.md  build_clang.sh  build_linux.sh  build_msvc.sh  clean.sh  config.inp  data.csv
backup/: config.inp
backup/backupsrc/: MakeGrid.cpp  Resid.cpp  lusgs.cpp  qdot.cpp
backupsrc/: BCFree.cpp  BCWall.cpp  FluxJac.cpp
extras/: HLLCFlux.hpp  fluxjac.hpp  qdotq.hpp  resid.hpp
include/: HLLCFlux.hpp  boundaryconditions.hpp  config.h  grid.hpp  lusgs.hpp  resid.hpp  simpleFunctions.hpp  solver.hpp
main/: main.cpp
reference/: HLLCFlux.m  READ-ME.txt  bcfree.m  bcwall.m  fluxjac.m  lusgs.m  makegrid.m  metrics.m  qdotq.m  resid.m  solver.m
resources/: config.cpp  config.h  getopt.h  helpers.h
src/: HLLCFlux.cpp  Metrics.cpp  Solver.cpp  bcfree.cpp  bcwall.cpp  config.cpp  fluxjac.cpp  lusgs.cpp  makegrid.cpp  metrics.cpp  qdotq.cpp  resid.cpp
